--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RoShamBo in the Console!</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="code.js"></script>
+    <script src="code.js" defer></script>
 </head>
 
 <body>
