Added GUI, pixel art

--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RoShamBo in the Console!</title>
+    <title>RoShamBo!</title>
     <link rel="stylesheet" href="styles.css">
     <script src="code.js" defer></script>
 </head>
 
 <body>
-
+    <div class="bodyDiv">
+        <div class="gameContainer">
+            <div class="titleLog">
+                <p class="titleText">Welcome to RPS! Choose wisely...</p>
+            </div>
+            <div class="buttonContainer">
+                <button class="rockSelector">Rock</button>
+                <button class="paperSelector">Paper</button>
+                <button class="scissorSelector">Scissor</button>
+            </div>
+        </div>
+        <div class="idArrowContainer">
+            <div class="idArrow">
+                <h1 class="arrowNames">You</h1>
+                <img src="RPS-Arrow.png" alt="" class="arrow">
+            </div>
+            <div class="resultTextContainer">
+                <div class="roundText"></div>
+                div.
+            </div>
+            <div class="idArrow">
+                <h1 class="arrowNames">Bot</h1>
+                <img src="RPS-Arrow.png" alt="" class="arrow">
+            </div>
+        </div>
+        <div class="arenaContainer">
+            <div class="fighters">
+                <img src="RPS-MainChar.gif" alt="" class="player">
+                <img src="" alt="" class="playerChoice">
+                <div class="status">Fight!</div>
+                <img src="" alt="" class="botChoice">
+                <img src="RPS-Enemy1.gif" alt="" class="player">
+            </div>
+            <div class="platform"></div>
+        </div>
+    </div>
 </body>
 
 </html>
