Score working, need to add restart and round tracker

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="bodyDiv">
         <div class="gameContainer">
             <div class="titleLog">
-                <p class="titleText">Welcome to RPS! Choose wisely...</p>
+                <p class="titleText">Welcome to RPS! First to 5 wins. Choose wisely...</p>
             </div>
             <div class="buttonContainer">
                 <button class="rockSelector">Rock</button>
@@ -23,15 +23,20 @@
         </div>
         <div class="idArrowContainer">
             <div class="idArrow">
-                <h1 class="arrowNames">You</h1>
+                <div class="scoreContainer">
+                    <h1 class="playerScore">P1: </h1>
+                    <h1 class="playerScoreNum">0</h1>
+                </div>
                 <img src="RPS-Arrow.png" alt="" class="arrow">
             </div>
             <div class="resultTextContainer">
-                <div class="roundText"></div>
-                div.
+                <div class="roundText">Round: 1</div>
             </div>
             <div class="idArrow">
-                <h1 class="arrowNames">Bot</h1>
+                <div class="scoreContainer">
+                    <h1 class="botScore">P2: </h1>
+                    <h1 class="botScoreNum">0</h1>
+                </div>
                 <img src="RPS-Arrow.png" alt="" class="arrow">
             </div>
         </div>
