Round tracker and restart button added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <img src="RPS-Arrow.png" alt="" class="arrow">
             </div>
             <div class="resultTextContainer">
-                <div class="roundText">Round: 1</div>
+                <p>Round:</p>
+                <div class="roundText"> 1</div>
             </div>
             <div class="idArrow">
                 <div class="scoreContainer">
